--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <!-- About -->
-   <section class="whole">
+   <section>
   <section id="about" class="about">
     <h2>About Me</h2>
     <p>I'm an enthusiastic web developer with good knowledge and 
@@ -67,7 +67,7 @@
   <!-- Projects -->
   <section class="projects">
     <div class="myproject">
-      <a href="">My Project</a>
+      <a href="http://127.0.0.1:5501/">My Project</a>
       <p>A gym website developed to help people keep their health in check.</p>
     </div>   
     <footer>
