--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <!-- Projects -->
   <section class="projects">
     <div class="myproject">
-      <a href="http://127.0.0.1:5501/">My Project</a>
-      <p>A gym website developed to help people keep their health in check.</p>
+      <a href="https://ryankiprop.github.io/portfolio/">My Project</a>
+      <p>My personal website!</p>
     </div>   
     <footer>
       <p>
