--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-   <!-- nav bar -->
+  
   <nav>
     <div class="nav-container">
       <a href="#home" class="nav-logo">Ryan</a>
@@ -22,26 +22,26 @@
     </div>
   </nav>
 
-  <!-- Home -->
+ 
   <section class="home">
     <div class="home-container">
       <h1>Hello, I'm Ryan</h1>
       <img src="./assets/images/ryan.jpg" alt="ryan">
-      <p>A Web Developer | Designer</p>
+      <p>A Software Developer | Designer</p>
       
     </div>
   </section>
 
-  <!-- About -->
+  
    <section>
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>I'm an enthusiastic web developer with good knowledge and 
+    <p>I'm an enthusiastic software developer with good knowledge and 
       experience in front-end development. 
       I love creating clean, efficient, and user-friendly websites.</p>
   </section>
 
-  <!-- Skills -->
+  
   <section class="skills">
     <h2>Skills</h2>
     <div class="skills-container">
@@ -64,10 +64,10 @@
     </div>
   </section>
 
-  <!-- Projects -->
+  
   <section class="projects">
     <div class="myproject">
-      <a href="https://ryankiprop.github.io/portfolio/">My Project</a>
+      <a href="https://ryankiprop.github.io/portfolio/">My Projects</a>
       <p>My personal website!</p>
     </div>   
     <footer>
